--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ compileTestJava.options.encoding = "UTF-8"
 
 repositories{
     mavenCentral()
+    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
     maven{ url 'https://www.jitpack.io' }
 }
 
@@ -33,7 +34,7 @@ dependencies{
     def webhooksVersion = '0.8.2'
 
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
     //change 'implementation' to 'compile' in old Gradle versions
     implementation("net.dv8tion:JDA:$jdaVersion") {
