--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,21 +1,30 @@
 name: Java CI
 
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v1
+
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
         java-version: 17
+
     - name: Build plugin jar
       run: ./gradlew jar
+
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}
         path: build/libs/${{ github.event.repository.name }}.jar
+
+    - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: build/libs/${{ github.event.repository.name }}.jar
