--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,6 @@
 name: Java CI
 
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   buildJar:
@@ -14,8 +14,14 @@ jobs:
         java-version: 17
     - name: Build plugin jar
       run: ./gradlew jar
-    - name: Upload built jar file
+    - name: Upload built jar file as an artifact
       uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}
         path: build/libs/${{ github.event.repository.name }}.jar
+    - name: Upload built jar file as a release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: build/libs/${{ github.event.repository.name }}.jar
+        tag: ${{ github.ref }}
