--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,25 +7,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
+    - uses: actions/checkout@v1
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
         java-version: 17
-
     - name: Build plugin jar
       run: ./gradlew jar
-
-    - name: Upload built jar file
+    - name: Upload built jar file as an artifact
       uses: actions/upload-artifact@v2
       with:
         name: ${{ github.event.repository.name }}
         path: build/libs/${{ github.event.repository.name }}.jar
-
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Upload built jar file as a release
+      uses: svenstaro/upload-release-action@v2
       with:
-        files: build/libs/${{ github.event.repository.name }}.jar
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: build/libs/${{ github.event.repository.name }}.jar
+        tag: ${{ github.ref }}
